--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node --experimental-specifier-resolution=node ./src/index.js",
+    "save-json": "node --experimental-specifier-resolution=node ./src/index.js",
+    "load-json": "node --experimental-specifier-resolution=node ./src/load-json.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "devDependencies": {
